@@ -21,28 +21,20 @@
 
 CString GetCachePipeName()
 {
-	CString s = TSVN_CACHE_PIPE_NAME;
-	HANDLE token;
-	DWORD len;
-	BOOL result = OpenProcessToken(GetCurrentProcess(), TOKEN_QUERY, &token);
-	if(result)
-	{
-		GetTokenInformation(token, TokenStatistics, NULL, 0, &len);
-		LPBYTE data = new BYTE[len];
-		GetTokenInformation(token, TokenStatistics, data, len, &len);
-		LUID uid = ((PTOKEN_STATISTICS)data)->AuthenticationId;
-		delete [ ] data;
-		CString t;
-		t.Format(_T("-%08x%08x"), uid.HighPart, uid.LowPart);
-		CloseHandle(token);
-		return s + t;
-	}
-	return s;
+	return TSVN_CACHE_PIPE_NAME + GetCacheID();
 }
 
 CString GetCacheCommandPipeName()
 {
-	CString s = TSVN_CACHE_COMMANDPIPE_NAME;
+	return TSVN_CACHE_COMMANDPIPE_NAME + GetCacheID();
+}
+
+CString GetCacheMutexName()
+{
+	return TSVN_CACHE_MUTEX_NAME + GetCacheID();
+}
+CString GetCacheID()
+{
 	HANDLE token;
 	DWORD len;
 	BOOL result = OpenProcessToken(GetCurrentProcess(), TOKEN_QUERY, &token);
@@ -56,7 +48,7 @@ CString GetCacheCommandPipeName()
 		CString t;
 		t.Format(_T("-%08x%08x"), uid.HighPart, uid.LowPart);
 		CloseHandle(token);
-		return s + t;
+		return t;
 	}
-	return s;
+	return _T("");
 }
